syntax = "proto3";

package go.micro.srv.session; 

service SessionService {
  rpc CreateSession(SessionRequest) returns (Response) {}
  rpc GetSession(GetRequest) returns (Response) {}
  rpc DeleteSession(GetRequest) returns (Response) {}
}

message SessionRequest {
  string id = 1;
  string userId = 2;
}

message SessionResponse {
  string sessionId = 1;
}

message Response {
  bool success = 1;
  SessionResponse response = 2;
}

// Created a blank get request
message GetRequest {
    string sessionId = 1;
    string sessionKey = 2;
}